--- a/PFE-MADAR-GRH/requirements.txt
+++ b/PFE-MADAR-GRH/requirements.txt
@@ -4,5 +4,7 @@ django-cors-headers==4.9.0
 djangorestframework==3.16.1
 djangorestframework-simplejwt==5.2.1
 PyJWT==2.11.0
+openpyxl==3.1.5
+reportlab==4.1.0
 sqlparse==0.5.5
 typing_extensions==4.15.0
